footer overflow fix

--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -17,6 +17,7 @@
       "copyright copyright";
     grid-template-columns: 318px 1fr;
     gap: 26px 30px;
+    padding-bottom: 42px;
   }
 }
 
