--- a/source/styles/blocks/service-navigation.scss
+++ b/source/styles/blocks/service-navigation.scss
@@ -79,6 +79,7 @@
   background-size: 13px 16px;
   background-repeat: no-repeat;
   background-position: 0 3px;
+  display: block;
 
   @media (min-width: $tablet-width) {
     max-width: 223px;
